Fix image alignment problem.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ h2 {
 
 .postcontent_stupeur > p > img {
   width: 80vw;
+  text-align: center;
 }
 
 .arrowImg {
